--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ qtcreator-*
 
 # Catkin custom files
 CATKIN_IGNORE
+
+# ignore vim files
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
