--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,6 +137,7 @@ add_executable(
 	include/action_planner/service_manager_mvnpln.cpp
 	include/action_planner/service_manager_vision.cpp
 	include/action_planner/service_manager_head.cpp
+	include/action_planner/primitives_tasks.cpp
 )
 ## Specify libraries to link a library or executable target against
 target_link_libraries(action_planner_complete
