--- a/package.xml
+++ b/package.xml
@@ -68,6 +68,8 @@
   <build_depend>vision</build_depend>
   <run_depend>vision</run_depend>
 
+  <build_depend>robot_service_manager</build_depend>
+  <run_depend>robot_service_manager</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
