planning msgs dependencies added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(catkin REQUIRED COMPONENTS
 	mvn_pln
 	roah_rsbb_comm_ros
     robot_service_manager
+    planning_msgs
 )
 
 ## System dependencies are found with CMake's conventions
