--- a/package.xml
+++ b/package.xml
@@ -70,6 +70,8 @@
 
   <build_depend>robot_service_manager</build_depend>
   <run_depend>robot_service_manager</run_depend>
+  <build_depend>planning_msgs</build_depend>
+  <run_depend>planning_msgs</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
