--- a/package.xml
+++ b/package.xml
@@ -72,6 +72,8 @@
   <run_depend>robot_service_manager</run_depend>
   <build_depend>planning_msgs</build_depend>
   <run_depend>planning_msgs</run_depend>
+  <build_depend>Boost</build_depend>
+  <run_depend>Boost</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
